# DI

Cloud/: build.gradle
Cloud/src/main/java/org/achl/di/: Main.java
Cloud/src/main/java/org/achl/di/data/: DataManager.java  MappedStatement.java  SettingsManager.java
Cloud/src/main/java/org/achl/di/entities/: DBObject.java  JsonField.java  SerializableField.java  SerializableObject.java
Cloud/src/main/java/org/achl/di/entities/types/: Factory.java  LocalManager.java  Sensor.java  SensorLog.java
Cloud/src/main/java/org/achl/di/enums/: RequestErrorCause.java  SensorType.java  SerializableFieldType.java
Cloud/src/main/java/org/achl/di/rest/: RestServer.java
Cloud/src/main/java/org/achl/di/rest/exceptions/: RequestException.java
Cloud/src/main/java/org/achl/di/util/: FactorySerializer.java  JSONSerializer.java  LocalManagerSerializer.java  LogSerializer.java  QueryUtil.java  SensorSerializer.java  Util.java
Cloud/src/main/resources/sql/: GetLatestLog.sql  GetLocalManagerBy_lm_id.sql  GetSensorBy_sens_id.sql  GetSensorList.sql  InitTables.sql  InsertFactory.sql  InsertLog.sql  InsertSensor.sql
FactoryManager/FactoryManager/: CMakeLists.txt  main.cpp
FactoryManager/FactoryManager/cpp/rest/: chttpform.cpp  chttprequest.cpp  cnetworkmanager.cpp  cnetworkmanager.h
STM/: CMakeLists.txt  OPCUA_STM.ioc  STM32F767ZITX_FLASH.ld  STM32F767ZITX_RAM.ld
STM/Core/Inc/: FreeRTOSConfig.h  open62541.h  si7021.h  tca9548.h
STM/Core/Src/: freertos.c  main.c  open62541.c  si7021.c  stm32f7xx_it.c  tca9548.c
STM/LWIP/App/: lwip.c
STM/User/: UserConfig.h
(+13 files in other folders)
